tests/error/misc_errors/wasm_bad_type.err
Error: WASM signature error (at $FILE:8:4)
  | 
6 | class Foo:
7 |     @guppy.wasm
8 |     def foo(self: "Foo", x: qubit) -> qubit: ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ WASM function signature contained an unsupported type:
  |                                                  `qubit`

Guppy compilation failed due to 1 previous error
